# wasm-game-of-life

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
